# Workshop_Automations

./: .env.development  .env.example  .env.production  .env.testing  .gitignore  package-lock.json  package.json  pyproject.toml
.bmad-core/: install-manifest.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
.ignore/: architecture.md  brainstorming-session-results.md  brief.md  custom-platform-brief.md
docs/: BRANCHING_STRATEGY.md  backend-architecture.md  front-end-spec.md  frontend-architecture.md  prd.md
docs/backend-architecture/: coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  rest-api-spec.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/frontend-architecture/: accessibility-implementation.md  api-integration.md  chat-refinement-interface.md  component-standards.md  frontend-developer-standards.md  frontend-tech-stack.md  index.md  next-steps.md  project-structure.md  routing.md  state-management.md  styling-guidelines.md  template-and-framework-selection.md  testing-requirements.md
docs/prd/: checklist-results-report.md  epic-1-foundation-basic-summary-analysis.md  epic-2-advanced-ai-analysis-voice-learning.md  epic-3-coach-interface-iterative-refinement.md  epic-4-search-team-management-features.md  epic-5-data-export-production-optimization.md  epic-list.md  goals-and-background-context.md  index.md  (+4 more)
(+2 files in other folders)
