[tool.poetry]
name = "mindscribe"
version = "0.1.0"
description = "Mindscribe"
authors = ["Development Team"]
readme = "README.md"
packages = [
    { include = "api", from = "packages" },
    { include = "shared", from = "packages" },
]

[tool.poetry.dependencies]
python = "^3.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
testcontainers = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true